# cryptogram_repl

./: .gitignore  .pre-commit-config.yaml  README.md  cryptogram_repl.py  hill_climber.py  pyproject.toml
data/: 4gram_logprobs.txt  5gram_logprobs.txt  war_and_peace.txt
examples/: puzzle.txt
src/cryptogram_repl/: __init__.py  _cli.py  _color_enum.py  _color_text.py  _compute_ngram_log_probs.py  _cryptogram_repl.py  _sliding_window.py
