[project]
name = "cryptogram_repl"
description = "Solve the NYT crossword"
authors = [{name = "djberenberg"}]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
]

[project.scripts]
cryptogram = "cryptogram_repl.cli:cli"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
search_parent_directories = true
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.setuptools.package-data]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
# disallow_any_unimported = true
check_untyped_defs = true
# no_implicit_optional = true
# warn_return_any = true
# disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true


[[tool.mypy.overrides]]

ignore_missing_imports = true

[tool.ruff]
line-length = 100
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
ensure_newline_before_comments = true
